# haskell-cis194

./: LICENSE  README.md  haskell-cis194.cabal  stack.yaml
app/: Main.hs
src/: HomeworkWeek01.hs  HomeworkWeek02.hs  HomeworkWeek03.hs  LectureWeek01.hs  LectureWeek02.hs
week01/: week01-homework.hs  week01-lesson.hs
week02/: Log.hs  LogAnalysis.hs  week02-lesson.hs
week03/: Golf.hs
