name:                haskell-cis194
version:             0.1.0.0
synopsis:            What is this for?
description:         Me working through CIS 194 (Fall '16) from UPenn
homepage:            https://github.com/sethetter/haskell-cis194#readme
license:             BSD3
license-file:        LICENSE
author:              Seth Etter
maintainer:          sethetter@gmail.com
copyright:           MIT
category:            haskell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HomeworkWeek01
                     , HomeworkWeek02
                     , HomeworkWeek03
  build-depends:       base >= 4.7 && < 5
                     , codeworld-api >= 0.2.1.0
  default-language:    Haskell2010

executable haskell-cis194-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , haskell-cis194
  default-language:    Haskell2010

test-suite haskell-cis194-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , haskell-cis194
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sethetter/haskell-cis194
